--- a/Test.html
+++ b/Test.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Test Page</title>
+	<meta charset="utf-8">
 </head>
 <body>
 	<h1>Hey. I'm a big Heading</h1>
