--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<!-- header element -->
 	<header>
-		<img src="img/hikikomori.jpeg">
+		<img src="img/hikikomori.jpg">
 		<h1>Hikikomori</h1>
 	</header>
 
@@ -14,7 +14,7 @@
 	<main>
 		<h2>About Tommy</h2>
 		<p>Tommy is a hikikomori who needs to get laid.</p>
-		<img src="img/TommyHiki.jpeg">
+		<img src="img/TommyHiki.jpg">
 		<p>Tommy with laundry</p>
 		<h2>Tommy's Characteristics</h2>
 		<ol>
