took away photo and added mini picture

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Hikikomori</title>
+	<link rel="icon" href="img/hikikomori.jpg"=>
 </head>
 <body>
 	<!-- header element -->
@@ -14,8 +15,6 @@
 	<main>
 		<h2>About Tommy</h2>
 		<p>Tommy is a hikikomori who needs to get laid.</p>
-		<img src="img/TommyHiki.jpg">
-		<p>Tommy with laundry</p>
 		<h2>Tommy's Characteristics</h2>
 		<ol>
 			<li>He doesn't get out much</li>
