made background and text similar

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Hikikomori</title>
 	<link rel="icon" href="img/hikikomori.jpg"=>
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Turret+Road:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<!-- header element -->
