--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Hikikomori</title>
-	<link rel="icon" href="img/hikikomori.jpg"=>
-	<link rel="stylesheet" type="text/css" href="css/hero.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link rel="icon" href="img/Tommy.jpg"=>
 	<link href="https://fonts.googleapis.com/css2?family=Turret+Road:wght@700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
+	
 </head>
 <body>
 	<!-- header element -->
